--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -49,3 +49,16 @@ jobs:
         file: ./Dockerfile
         push: true
         tags: ezambomsantana/campeonato-ci:${{ github.sha }}  #pega o hash do commit
+
+    - name: executing remote ssh commands using password
+      uses: appleboy/ssh-action@master
+      with:
+        host: ${{ secrets.HOST_TEST }}
+        username: "ubuntu"
+        key: ${{ secrets.KEY_TEST }}
+        port: 22
+        script: |
+          docker stop campeonato
+          docker rm --force campeonato
+          docker run -d -p 8080:8080 --network=rede --name campeonato
+          laupontiroli/campeonato-ci:${{ github.sha }}
