--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,7 +36,7 @@ jobs:
     - name: Login to Docker Hub
       uses: docker/login-action@v3
       with:
-        username: "seu-user-name"
+        username: "laupontiroli"
         password: ${{ secrets.DOCKERHUB_TOKEN }}
         
     - name: Set up Docker Buildx
