--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -60,5 +60,4 @@ jobs:
         script: |
           docker stop campeonato
           docker rm --force campeonato
-          docker run -d -p 8080:8080 --network=rede --name campeonato
-          laupontiroli/campeonato-ci:${{ github.sha }}
+          docker run -d -p 8080:8080 --network=rede --name campeonato laupontiroli/campeonato-ci:${{ github.sha }}
